# DistributedandParallelSystemsDTU

./: CMakeLists.txt
Basic/: HelloWorld.c  memoryHex.c
Lecture 1/: memory.c  pointers.c  timing.c
Lecture 2/: cachetest.c  matrix_sum.c  outputOnHPC.txt
Lecture 3/: restest.c  timing.c
Oplæsning på Basic c/: HelloWorld.c
