cmake_minimum_required(VERSION 3.13)
project(DistributedandParallelSystemsDTU C)

set(CMAKE_C_STANDARD 99)

add_executable(memory "Lecture 1/memory.c")
add_executable(pointers "Lecture 1/pointers.c")
add_executable(timing "Lecture 1/timing.c")
add_executable(HelloWorld "Oplæsning på Basic c/HelloWorld.c")
add_executable(memoryHex "Oplæsning på Basic c/memoryHex.c")
add_executable(cachetest "Lecture 2/cachetest.c")
add_executable(matrix_sum "Lecture 2/matrix_sum.c")